--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
         <h1>Login Page</h1>
         <a href="faculty/faculty.html">Faculty Dashboard</a>
         <a href="Students/studentdashboard.html">Student Dashboard</a>
-        <a href="Admin/admin_dashboard.html">Admin Dashboard</a>
+        <a href="admin/admin_dashboard.html">Admin Dashboard</a>
     </div>
 </body>
 </html>
