--- a/faculty/faculty_add_update_marks.html
+++ b/faculty/faculty_add_update_marks.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add/Update Marks</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="facultystyles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
