--- a/students/attendance.html
+++ b/students/attendance.html
@@ -16,7 +16,7 @@
                 <h2>StudentBridge</h2>
             </div>
             <div class="navbar">
-                <a href="index.html" class="active">
+                <a href="studentdashboard.html" class="active">
                     <span class="material-icons-sharp">home</span>
                     <h3>Home</h3>
                 </a>
@@ -40,7 +40,7 @@
                     <span class="material-icons-sharp">announcement</span>
                     <h3>Announcements</h3>
                 </a>
-                <a href="#">
+                <a href="../index.html">
                     <span class="material-icons-sharp">logout</span>
                     <h3>Logout</h3>
                 </a>
