--- a/students/password.html
+++ b/students/password.html
@@ -72,7 +72,7 @@
             <h2>U<span class="danger">M</span>S</h2>
         </div>
         <div class="navbar">
-            <a href="index.html">
+            <a href="studentdashboard.html">
                 <span class="material-icons-sharp">home</span>
                 <h3>Home</h3>
             </a>
@@ -88,7 +88,7 @@
                 <span class="material-icons-sharp">password</span>
                 <h3>Change Password</h3>
             </a>
-            <a href="#">
+            <a href="../index.html">
                 <span class="material-icons-sharp">logout</span>
                 <h3>Logout</h3>
             </a>
