--- a/faculty/faculty_post_announcements.html
+++ b/faculty/faculty_post_announcements.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Post Announcements</title>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
-    <link rel="shortcut icon" href="./images/logo.png">
+    <link rel="shortcut icon" href="src/cit.png">
     <link rel="stylesheet" href="facultystyles.css"> <!-- Link to external CSS -->
 </head>
 <body>
     <!-- Header Section -->
     <header>
         <div class="logo" title="Students portal CIT">
-            <img src="src/cit.jpg" alt="">
+            <img src="src/cit.png" alt="">
             <h2>Faculty Bridge</h2>
         </div>
         <div class="navbar">
