--- a/faculty/faculty_marksattendance.html
+++ b/faculty/faculty_marksattendance.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mark Attendance</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="src/cit.png" type="image/png">
+    <link rel="stylesheet" href="facultystyles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
