--- a/faculty/faculty_view_student_details.html
+++ b/faculty/faculty_view_student_details.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Student Details</title>
+    <link rel="shortcut icon" href="src/cit.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
