--- a/faculty/faculty_view_students.html
+++ b/faculty/faculty_view_students.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>View Department Students</title>
+    <link rel="shortcut icon" href="src/cit.png" type="image/png">
     <link rel="stylesheet" href="styles.css">
     <style>
         body {
