--- a/students/studentdashboard.html
+++ b/students/studentdashboard.html
@@ -160,5 +160,7 @@
     <!-- Scripts -->
     <script src="timetable.js"></script>
     <script src="app.js"></script>
+    <script src="fetchStudentData.js"></script>
+    
 </body>
 </html>
